--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full-Screen Embed</title>
+    <link rel="icon" type="image/x-icon" href="https://images.squarespace-cdn.com/content/v1/62c65dad532cb5332e1fea58/dfa3809a-2515-4382-b06d-a944c28266f9/favicon.ico?format=100w">
+    <title>Careers | Hybron </title>
     <style>
         html, body {
             height: 100%;
@@ -19,6 +20,6 @@
     </style>
 </head>
 <body>
-    <iframe src="https://jobs.bitstoatoms.com/hybron" title="Embedded Website"></iframe>
+    <iframe src="https://jobs.bitstoatoms.com/hybron"></iframe>
 </body>
 </html>
